# advent-of-code-2023-solutions

./: .gitignore  Cargo.toml
data/examples/: 01.txt
data/puzzles/: 04.md  05.md  06.md  07.md  08.md  09.md  11.md  12.md  13.md  14.md  15.md  16.md  19.md
src/: day.rs
src/template/: aoc_cli.rs  runner.rs
src/template/commands/: all.rs  scaffold.rs
