[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
counter = "0.5.7"
log = "0.4.20"
pico-args = "0.5.0"
qndr = "0.1.7"
rayon = "1.8.0"
tqdm = "0.6.0"
